my second commit from dev1

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
         <center>
             <h1>Welcome to Devops world</h1>
             <h2>This is my Git Training</h2>
+            <button>Click here</button>
         </center>
     </body>
 </html>
